--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -28,60 +28,35 @@ Use the audit trail functionality in the {{< var validmind.platform >}} to track
 
 ### Filter activity
 
-Use the top tabs to narrow down model activity.
+Use the **{{< fa filter >}} Filter** button to narrow down activity by category or specific values.
 
-::: {.panel-tabset}
+1. Click **{{< fa filter >}} Filter** to open the filter popover.
 
-#### All
+2. Click **{{< fa plus >}} Add Rule** to add a filter condition.
 
-Default view. Shows all activity.
+3. From the dropdown, select a filter option:
 
-#### Comments
+   Event Category
+   : Shows _all events_ in a category. For example, selecting **Artifacts: Validation Issue** shows all validation issue events. Options include artifact types (such as Artifacts: Validation Issue, Artifacts: Policy Exception, or Artifacts: Model Limitation), Model Documents, Model Inventory Fields, Model Lifecycle, Model Metrics, Model Stakeholders, and Workflows.
 
-Shows only comments created or replied to.[^2] Shows only mentions by default.
+   Filter by Value
+   : Shows events for _specific items you select_. Pick a category, then choose one or more specific items from the second dropdown. For example, choose a particular validation issue, workflow, or custom field. 
 
-Comment settings
-: - Select **Show all comments** to show all comments.
-- Select **Show only mentions** to see only comments you're mentioned in.
+4. (Optional) Add more rules by repeating the previous steps. Multiple rules combine with AND logic — for example, filter by a category and a specific user to see only that user's activity in that category.
 
-#### Status Updates
+5. Click **Apply Filters**.
 
-Shows model stage transitions.[^3]
+### View active filters
 
-#### Model Updates
+After applying filters, active conditions appear as chips below the header. Click {{< fa xmark >}} on any chip to remove that filter, or click **Clear All Filters** to reset.
 
-Shows model level updates:
+### Share filtered views
 
-- Inventory fields updated on the model[^4]
-- Updates to model documentation, validation reports,[^5] or ongoing monitoring plans[^6]
-- Artifacts added, updated, or removed[^7]
-- Model stakeholders added or removed from your model[^8]
-
-#### Test Results
-
-Shows test results logged for your model via the {{< var validmind.developer >}}.[^9]
-
-:::
+Filters persist in the URL, so you can share or bookmark a filtered view.
 
 
 <!-- FOOTNOTES -->
 
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
-
-[^2]: [Commenting](/guide/model-documentation/collaborate-with-others.qmd#commenting)
-
-[^3]: [Manage model stages](/guide/workflows/manage-model-stages.qmd)
-
-[^4]: [Edit model inventory fields](/guide/model-inventory/edit-model-inventory-fields.qmd)
-
-[^5]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
-
-[^6]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-
-[^7]: [Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)
-
-[^8]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
-
-[^9]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
 
