--- a/site/support/support.qmd
+++ b/site/support/support.qmd
@@ -42,8 +42,8 @@ Need more help? Get in touch with us via our help center, live chat, email, or b
 
 ::: {.column-margin}
 
-:::{#help-center}
-:::
+<!-- :::{#help-center}
+::: -->
 
 ::: {.callout title="Why use the Help Center?"}
 We recommend you use the Help Center because it allows you to keep track of and view tickets on behalf of your organization.
@@ -69,10 +69,9 @@ If you have a {{< var vm.product >}} account, sign in with your login email to h
 ::: {.w-50-ns .pr4}
 
 ::: {.pt3}
-#####  &#8203;<svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <!-- Pink rounded square background --> <rect x="0" y="0" width="24" height="24" rx="6" ry="6" fill="#222425"/> <!-- Scaled path at 65% and centered --> <g transform="scale(0.65) translate(6, 10)"> <path d="M10,18 L6,22 L6,18 L10,18 Z M17,6 C19.7614237,6 22,8.23857625 22,11 C22,13.7614237 19.7614237,16 17,16 L17,16 L7,16 C4.23857625,16 2,13.7614237 2,11 C2,8.23857625 4.23857625,6 7,6 L7,6 Z" transform="translate(12.000000, 11.000000) scale(-1, 1) translate(-12.000000, -14.000000)" fill="#FFFFFF"></path> </g></svg>&ensp;Chat
-Click on the chat icon on the bottom-right corner of any page in our documentation site. 
-
-If you have a {{< var vm.product >}} account, provide your login email to help us identify you.
+:::{#help-center}
+:::
+<br>
 
 :::
 
@@ -85,10 +84,10 @@ If you have a {{< var vm.product >}} account, provide your login email to help u
 ::: {.w-50-ns .pl2 .pr4}
 
 ::: {.pt3}
-##### {{< fa envelope solid size=xl >}}&ensp;Email 
-Send an email to [{{< var support.email >}}](mailto:{{< var support.email >}}).
+#####  &#8203;<svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"> <!-- Pink rounded square background --> <rect x="0" y="0" width="24" height="24" rx="6" ry="6" fill="#222425"/> <!-- Scaled path at 65% and centered --> <g transform="scale(0.65) translate(6, 10)"> <path d="M10,18 L6,22 L6,18 L10,18 Z M17,6 C19.7614237,6 22,8.23857625 22,11 C22,13.7614237 19.7614237,16 17,16 L17,16 L7,16 C4.23857625,16 2,13.7614237 2,11 C2,8.23857625 4.23857625,6 7,6 L7,6 Z" transform="translate(12.000000, 11.000000) scale(-1, 1) translate(-12.000000, -14.000000)" fill="#FFFFFF"></path> </g></svg>&ensp;Chat
+Click on the chat icon on the bottom-right corner of any page in our documentation site. 
 
-If you have a {{< var vm.product >}} account, send a message from your login email to help us identify you.
+If you have a {{< var vm.product >}} account, provide your login email to help us identify you.
 
 :::
 
@@ -96,14 +95,14 @@ If you have a {{< var vm.product >}} account, send a message from your login ema
 
 ::: {.w-50-ns .pr4}
 
-&nbsp;
+##### {{< fa envelope solid size=xl >}}&ensp;Email 
+Send an email to [{{< var support.email >}}](mailto:{{< var support.email >}}).
+
+If you have a {{< var vm.product >}} account, send a message from your login email to help us identify you.
+
 
 :::
 
 ::::
-
-{{< include /training/_training-support.qmd >}}
-
-<span id="feedback"></span>
 
 {{< include /support/_submit-feedback.qmd >}}
