--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -2,7 +2,7 @@
 # Copyright © 2023-2026 ValidMind Inc. All rights reserved.
 # Refer to the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
-title: What is ValidMind?
+title: What is {{< var vm.product >}}?
 subtitle: <b>a short product tour</b>
 favicon: ../assets/validmind.png
 format:
@@ -18,7 +18,7 @@ format:
     preview-links: auto
     view-distance: 2
     logo: /favicon.svg
-    footer: "[[CONTENTS]{.smallcaps .f5 .b}](#contents)&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
+    footer: "[[contents]{.smallcaps .f4 .b}](#contents)&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}"
     revealjs-plugins:
       - slideover
   html:
@@ -56,7 +56,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[Workflows + Approvals]{.b .black .f4}](#workflows-approvals)
+![](2-workflows-and-approvals.png){height=125px fig-alt="A screenshot of the workflows and approvals"}<br>[[Workflows & Approvals]{.b .black .f4}](#workflows-approvals)
 :::
 
 :::
@@ -76,7 +76,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights + Regulatory Alignment]{.b .black .f4}](#risk-insights-regulatory-alignment)
+![](6-risk-insights-and-regulatory-alignment.png){height=125px fig-alt="A screenshot of the risk insights and regulatory alignment"}<br>[[Risk Insights & Regulatory Alignment]{.b .black .f4}](#risk-insights-regulatory-alignment)
 :::
 :::
 :::
@@ -89,7 +89,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[Reporting + Analytics]{.b .black .f4}](#reporting-analytics)
+![](3-reporting-and-analytics.png){height=125px fig-alt="A screenshot of the reporting and analytics"}<br>[[Reporting & Analytics]{.b .black .f4}](#reporting-analytics)
 :::
 
 :::
@@ -123,7 +123,7 @@ skip_preview: true
 :::
 
 ::: {.nt6}
-![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation + Testing + Validation]{.b .black .f4}](#documentation-testing-validation)
+![](4-documentation-testing-and-validation.png){height=125px fig-alt="A screenshot of the documentation, testing and validation"}<br>[[Documentation & Testing & Validation]{.b .black .f4}](#documentation-testing-validation)
 :::
 
 :::
@@ -173,11 +173,13 @@ skip_preview: true
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
-[The Inventory]{.f1 .b}
+[The Inventory]{.f1 .b style="color: #083e44;"}
 
 <!-- <hr> -->
 
-ValidMind is your [system of record]{.b} for governance. Use the inventory to [track AI systems, models, use cases, and tools]{.b}, along with their dependencies.
+{{< var vm.product >}} is your [system of record]{.b} for governance.
+
+Use the [{{< var vm.product >}} Inventory]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} to [track AI systems, models, use cases, and tools]{.b}, along with their dependencies.
 :::
 
 ::::
@@ -187,7 +189,7 @@ ValidMind is your [system of record]{.b} for governance. Use the inventory to [t
 
 <!-- Section indicator -->
 ::: {.f6 .tr .nt3 .pr2 .silver}
-The Inventory
+The Inventory — 2/3
 :::
 
 
@@ -200,24 +202,15 @@ The Inventory
 :::
 
 ::: {.column width="40%" .f3 .pl3}
-The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own fields, [integrated with workflows]{.b}, and [scales to your needs]{.b}.
+The [{{< var vm.product >}} Inventory]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} is [industry-aligned]{.b}, highly [customizable]{.b} with your own fields, [integrated with workflows]{.b}, and [scales to your needs]{.b}.
 :::
 
 ::::
 
 ::: {.slideover--b .auto-collapse}
-
-:::: columns
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use the inventory?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/working-with-model-inventory.html){target="_blank"}
+::: {.tc}
+[[{{< fa circle-info >}}&ensp;How do I use the {{< var vm.product >}} Inventory?]{.button .button-light-green .shadow-5-ns}](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}
 :::
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open the inventory]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory){target="_blank"}
-:::
-
-::::
 
 :::
 
@@ -226,7 +219,7 @@ The inventory is [industry-aligned]{.b}, highly [customizable]{.b} with your own
 
 <!-- Section indicator -->
 ::: {.f6 .tr .nt3 .pr4 .silver}
-The Inventory
+The Inventory — 3/3
 :::
 
 :::: {.columns}
@@ -240,7 +233,12 @@ The Inventory
 
 <!-- You provide [basic information]{.b}, a [preliminary risk tier]{.b}, who the [stakeholders]{.b} are, and information whether the item is an [AI application]{.b}. -->
 
+<br><br>
+
+::: {.embed .pl3 .f4}
 For example, you can require users to [identify AI applications]{.b} so that they can be governed appropriately.
+
+:::
 
 
 <!-- Specify the [business unit and use case]{.b}, identify [third party vendors]{.b}, and assign [preliminary risk tiers]{.b}. -->
@@ -257,23 +255,14 @@ For example, you can require users to [identify AI applications]{.b} so that the
 ::::
 
 ::: {.slideover--b .auto-collapse}
-
-:::: columns
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I register items?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-inventory/register-models-in-inventory.html){target="_blank"} 
+::: {.tc}
+[[{{< fa circle-info >}}&ensp;How do I register items in the {{< var vm.product >}} Inventory?]{.button .button-light-green .shadow-5-ns}](/guide/model-inventory/register-models-in-inventory.qmd){target="_blank"} 
 :::
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Register a new item]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory/?register=open){target="_blank"}
-:::
-
-::::
 
 :::
 
 
-# [2&ensp;Workflows + Approvals]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
+# [2&ensp;Workflows & Approvals]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -290,32 +279,35 @@ For example, you can require users to [identify AI applications]{.b} so that the
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
-[Workflows & Approvals]{.f1 .b}
+[Workflows & Approvals]{.f1 .b style="color: #083e44;"}
 
 <!-- <hr> -->
 
-ValidMind workflows enable governance by defining [roles and responsibilities]{.b}, enforcing [policies and procedures]{.b}, and [audit trails]{.b} across the lifecycle.
+Workflows are entwined with your inventory and enable governance by defining [roles and responsibilities]{.b}, enforcing [policies and procedures]{.b}, and [audit trails]{.b} across the lifecycle within one single tool for oversight — the [{{< var validmind.platform >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"}.
 
 :::
 
 ::::
 
 
-# [Roles and responsibilities]{.hidden}
+# [Roles and Responsibilities]{.hidden}
 
 <!-- Section indicator -->
 ::: {.f6 .tr .mb4 .nt4 .silver}
-Workflows + Approvals
+Workflows & Approvals — 2/3
 :::
 
 :::: {.columns}
 
 ::: {.column width="60%" .tc .nt6}
-![](../assets/vm-risk-classification-workflow.gif){width="80%" fig-alt="A screenshot of workflow detail showing how model registration includes a risk classification step" .screenshot .tilt-right}
+![](../assets/vm-risk-classification-workflow.gif){width="90%" fig-alt="A screenshot of workflow detail showing how model registration includes a risk classification step" .screenshot .tilt-right}
 :::
 
 ::: {.column width="40%" .f3 .pl3 .nt3}
-[Roles and responsibilities]{.b} define clear actions for your stakeholders to follow.
+
+Use workflows within the [{{< var validmind.platform >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} to govern in one centralized place:
+
+- Define [roles and responsibilities]{.b} providing clear actions for your stakeholders to follow.
 
 <!-- [Roles and Responsibilities]{.f3 .b} 
 
@@ -328,7 +320,7 @@ Define actions for:
 - Governance committees and other stakeholders
 ::: -->
 
-[Audit trails]{.b} track all activities across lifecycle stages, statuses, artifacts, and validation issues.
+- Review [audit trails]{.b} to track all activities across lifecycle stages, statuses, artifacts, and validation issues.
 
 <!-- [Audit Trails]{.f3 .b} 
 
@@ -348,21 +340,13 @@ Track all activities for:
 
 ::: {.slideover--b .auto-collapse-30}
 
-:::: columns
+::: {.f4}
+[Control the steps and transitions that guide items through their lifecycle with workflows:]{.b}
 
-::: {.column width="80%" .pr4 .nt4}
-[Workflows control the steps and transitions that guide items through their lifecycle:]{.f3 .b}
-
-- [Predefined workflows enable out-of-the-box compliance for regulatory frameworks]{.f4}
-- [Custom workflows support any external regulation or internal policy]{.f4}
+- Predefined workflows enable out-of-the-box compliance for regulatory frameworks.
+- Custom workflows support any external regulation or internal policy.
 
 :::
-
-::: {.column width="20%" .pl4 .nt3}
-[SR 11-7](/about/use-cases/sr-11-7.qmd){target="_blank" .button-small .shadow-5-ns}<br>[SS1/23](/about/use-cases/ss1-23.qmd){target="_blank" .button-small .shadow-5-ns}<br>[E-23](/about/use-cases/e-23.qmd){target="_blank" .button-small .shadow-5-ns}<br>[EU AI ACT](/about/use-cases/eu-ai-act.qmd){target="_blank" .button-small .shadow-5-ns}
-:::
-
-::::
 
 :::
 
@@ -371,7 +355,7 @@ Track all activities for:
 
 <!-- Section indicator -->
 ::: {.f6 .tl .mb4 .pl4 .nt3 .silver}
-Workflows + Approvals
+Workflows & Approvals — 3/3
 :::
 
 :::: {.columns}
@@ -381,7 +365,7 @@ Workflows + Approvals
 [What can I use workflows for?]{.f2 .b}
 
 ::: {.pl2 .pt2}
-[{{< fa check >}}]{.dark-pink} &ensp;[Implement]{.b} governance for regulations and  policies.
+[{{< fa check >}}]{.dark-pink} &ensp;[Implement]{.b} governance for regulations and policies.
 
 [{{< fa check >}}]{.dark-pink} &ensp;[Demonstrate]{.b} compliance to auditors.
 
@@ -401,22 +385,15 @@ Workflows + Approvals
 
 ::: {.slideover--b .auto-collapse}
 
-:::: columns
+::: {.tc}
+[[{{< fa circle-info >}}&ensp;How do I use workflows in the {{< var validmind.platform >}}?]{.button .button-light-green .shadow-5-ns}](/guide/workflows/working-with-workflows.qmd){target="_blank"} 
 
-::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use workflows?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/workflows/working-with-workflows.html){target="_blank"} 
 :::
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open workflows]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/settings/workflows){target="_blank"}
-:::
-
-::::
 
 :::
 
 
-# [3&ensp;Reporting + Analytics]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
+# [3&ensp;Reporting & Analytics]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -433,11 +410,11 @@ Workflows + Approvals
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
-[Reporting & Analytics]{.f2 .b}
+[Reporting & Analytics]{.f1 .b style="color: #083e44;"}
 
 <!-- <hr> -->
 
-ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversight, plus [flexible exports]{.b} to meet reporting requirements.
+Use [customizable dashboards]{.b} for oversight, alongside [extensible analytics]{.b} and [flexible exports]{.b} to meet reporting requirements in the same tool where your inventory and workflows live — the [{{< var validmind.platform >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"}.
 
 :::
 
@@ -448,25 +425,25 @@ ValidMind provides [customizable dashboards]{.b} and [analytics]{.b} for oversig
 
 <!-- Section indicator -->
 ::: {.f6 .tr .mb4 .pr3 .silver}
-Reporting + Analytics
+Reporting & Analytics — 2/2
 :::
 
 :::: {.columns}
 
 ::: {.column width="60%" .tc .nt4}
-![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot .tilt-right}
+![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind Platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot .tilt-right}
 :::
 
 ::: {.column width="40%" .f3 .pl3 .nt3}
 
-[Enable stakeholders]{.b} to take responsibility:
+[Enable teams]{.b} to collaborate and take shared responsibility:
 
 ::: {.pl2 .pt2 .f4}
-- [Track validation issues]{.b}, approvals, and sign-offs across the model lifecycle.
-- Get [clear analytics]{.b} and [real-time insights]{.b} to assess your risk posture. 
+- [Track validation issues]{.b}, approvals, and sign-offs across your model lifecycles linked to the same inventory used to track models.
+- Get [clear analytics]{.b} and [real-time insights]{.b} throughout all stages of your model lifecycles to assess your risk posture. 
 :::
 
-[Export documents]{.b} to share with other stakeholders.
+[Export documents]{.b} to share with additional stakeholders.
 
 :::
 
@@ -477,11 +454,11 @@ Reporting + Analytics
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use analytics?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/working-with-analytics.html){target="_blank"} 
+[[{{< fa circle-info >}}&ensp;How do I use analytics?]{.button .button-light-green .shadow-5-ns}](/guide/reporting/working-with-analytics.qmd){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I export?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/reporting/generating-exports.html){target="_blank"}
+[[{{< fa circle-info >}}&ensp;How do I export?]{.button .button-light-green .shadow-5-ns}](/guide/reporting/generating-exports.qmd){target="_blank"}
 :::
 
 ::::
@@ -489,7 +466,7 @@ Reporting + Analytics
 :::
 
 
-# [4&ensp;Documentation + Testing + Validation]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
+# [4&ensp;Documentation & Testing & Validation]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -506,11 +483,11 @@ Reporting + Analytics
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
-[Documentation, Testing & Validation]{.f2 .b}
+[Documentation & Testing & Validation]{.f2 .b style="color: #083e44;"}
 
 <!-- <hr> -->
 
-ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} with our open-source library, and enables independent [validation]{.b} with full audit trails.
+[Automate documentation]{.b}, perform [comprehensive testing]{.b}, and enable [independent validation]{.b} with full audit trails all with our open-source tool — <br> the [{{< var validmind.developer >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"}.
 
 :::
 
@@ -520,27 +497,28 @@ ValidMind automates [documentation]{.b}, provides comprehensive [testing]{.b} wi
 
 <!-- Section indicator -->
 ::: {.f6 .tr .mb5 .nt6 .pr3 .silver}
-Documentation + Testing + Validation
+Documentation & Testing & Validation — 2/5
 :::
 
 :::: {.columns}
 
-::: {.column width="60%" .nt5}
+::: {.column width="50%" .nt5}
 
-![](../assets/vm-model-documentation.gif){width="90%" fig-alt="An animation of model documentation being scrolled through on the ValidMind platform. The scrolling starts at the documentation overview and then expands the development documentation section" .screenshot .tilt-right}
+![](../assets/vm-model-documentation.gif){width="100%" fig-alt="An animation of model documentation being scrolled through on the ValidMind Platform. The scrolling starts at the documentation overview and then expands the development documentation section" .screenshot .tilt-right}
 
 :::
 
-::: {.column width="40%" .nt5 .pt3 .pl4 .f3 .pb6}
+::: {.column width="50%" .nt5 .pt3 .pl4 .f4 .pb6}
 
 ::: {.pb2}
-[Documentation]{.f2 .b}
+[Documentation]{.f2 .b style="color: #083e44;"}
 :::
 
-- For [AI systems]{.b}, [models]{.b}, [use cases]{.b}, [tools]{.b}, and more
-- Use predefined [templates]{.b} or create your own
-- Full-featured [online editor]{.b}
-- Reusable [content block library]{.b}
+The [{{< var validmind.developer >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} ...
+
+- Works with [AI systems]{.b}, [models]{.b}, [use cases]{.b}, [tools]{.b}, and more.
+- Offers predefined [templates]{.b}, and the ability to create your own, including material from your reusable [content block library]{.b}.
+- Pairs seamlessly with the full-featured [online editor]{.b} in the {{< var validmind.platform >}}.
 :::
 
 ::::
@@ -549,40 +527,27 @@ Documentation + Testing + Validation
 
 :::: columns
 
-::: {.column width="70%" .nt4}
+::: {.column width="60%" .nt4}
 [Templates define the structure of your documents:]{.f3 .b}<br>
 
-1. Start with a predefined template for one of the use cases to save time
-2. Run notebooks with code samples to populate templates
-3. Add your own tests, add new sections, or create custom templates
-4. Save time with reusable content blocks in the online editor
+1. Start with a predefined template for one of the use cases to save time.
+2. Run notebooks with code samples to populate templates.
+3. Add your own tests, add new sections, or create custom templates.
+4. Save time with reusable content blocks in the online editor.
 
-[model&nbsp;documentation]{.button-small .shadow-5-ns .f5} [validation&nbsp;reports]{.button-small .shadow-5-ns .f5} [ongoing&nbsp;monitoring]{.button-small .shadow-5-ns .f5} [custom&nbsp;document&nbsp;types]{.button-small .shadow-5-ns .f5} 
+[[{{< fa circle-info >}}&ensp; On Documentation]{.button .button-light-green .shadow-5-ns}](/guide/model-documentation/working-with-model-documentation.qmd){target="_blank"} &ensp; [[{{< fa circle-info >}}&ensp; On Templates]{.button .button-light-green .shadow-5-ns}](/guide/templates/working-with-document-templates.qmd){target="_blank"}
+
 :::
 
-::: {.column width="30%" .tl .pl4}
-[fair&nbsp;lending]{.button-small .f4 .pl3 .shadow-5-ns  } 
-[bias&nbsp;testing]{.button-small .f4 .pl3 .shadow-5-ns}
-[llm]{.button-small .f4 .pl3 .shadow-5-ns}
-[rag]{.button-small .f4 .pl3 .shadow-5-ns}
-[nlp]{.button-small .f4 .pl3 .shadow-5-ns}
-[ml]{.button-small .f4 .pl3 .shadow-5-ns}
-[regression]{.button-small .f4 .pl3 .shadow-5-ns}
-[binary&nbsp;classification]{.button-small .f4 .pl3 .shadow-5-ns}
-[credit&nbsp;risk]{.button-small .f4 .pl3 .shadow-5-ns}
-[text&nbsp;classification]{.button-small .f4 .pl3 .shadow-5-ns}
-[time&nbsp;series]{.button-small .f4 .pl3 .shadow-5-ns}
-[capital&nbsp;markets]{.button-small .f4 .pl3 .shadow-5-ns}
-[credit&nbsp;scorecard]{.button-small .f4 .pl3 .shadow-5-ns}
+::: {.column width="40%" .tl .pl4}
 
-<!-- ::: {.tc .nt4}
-[EXAMPLES OF AVAILABLE TEMPLATES]{.smallcaps .f6}
-::: -->
+[Templates are available for all types of documents, including **model documentation**, **validation reports**, **ongoing monitoring reports**, and **custom document types**.]{.f5}
+
+[fair lending]{.bubble .smallcaps} [bias testing]{.bubble .smallcaps} [llm]{.bubble .smallcaps} [rag]{.bubble .smallcaps} [nlp]{.bubble .smallcaps} [ml]{.bubble .smallcaps} [regression]{.bubble .smallcaps}<br>[binary classification]{.bubble .smallcaps} [credit risk]{.bubble .smallcaps} [text classification]{.bubble .smallcaps}<br>[time series]{.bubble .smallcaps} [capital markets]{.bubble .smallcaps} [credit risk scorecard]{.bubble .smallcaps}
 
 :::
 
 ::::
-
 
 :::
 
@@ -591,23 +556,25 @@ Documentation + Testing + Validation
 
 <!-- Section indicator -->
 ::: {.f6 .tl .mb5 .nt6 .silver}
-Documentation + Testing + Validation
+Documentation & Testing & Validation — 3/5
 :::
 
 :::: {.columns}
 
-::: {.column width="40%" .nt4 .f3 .pr4}
-[Testing]{.f2 .b}
+::: {.column width="50%" .nt4 .f3 .pr4}
+[Testing]{.f2 .b style="color: #083e44;"}
 
-[[{{< fa brands github >}} open source software]{.smallcaps .b .black}](https://github.com/validmind/validmind-library){target="_blank"}
+[[{{< fa brands github >}} open-source software]{.smallcaps .b .pink .f4}](https://github.com/validmind/validmind-library){target="_blank"}
 
-- 200 [out-of-box tests]{.b}
-- End-to-end [test suites]{.b}
-- Model, prompt, and data [assessments]{.b}
-- Extensible with [custom tests]{.b} and [test providers]{.b}
+The [{{< var validmind.developer >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} includes ...
+
+- Over 200 [out-of-the-box tests]{.b}.
+- End-to-end [test suites]{.b}.
+- Model, prompt, and data [assessments]{.b}.
+- Capability for extension with [custom tests]{.b} and [test providers]{.b}. 
 :::
 
-::: {.column width="60%" .nt4}
+::: {.column width="50%" .nt4}
 ![](../assets/vm-test-sandbox.gif){fig-alt="An animation of the model testing process as you see various test results and documentation being created" .screenshot .tilt-left}
 :::
 
@@ -618,15 +585,15 @@ Documentation + Testing + Validation
 :::: columns
 
 ::: {.column width="30%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;Developer Quickstart]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/get-started/developer/quickstart-developer.html){target="_blank"}
+[[{{< fa circle-info >}}&ensp;Developer Quickstart]{.button .button-light-green .shadow-5-ns}](/get-started/developer/quickstart-developer.qmd){target="_blank"}
 :::
 
-::: {.column width="40%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;Developer Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/developer-fundamentals/developer-fundamentals-register.html){target="_blank"} 
+::: {.column width="40%" .tr .nt4}
+[[{{< fa circle-info >}}&ensp;Developer Fundamentals Training]{.button .button-light-green .shadow-5-ns}](/training/developer-fundamentals/developer-fundamentals-register.qmd){target="_blank"} 
 :::
 
 ::: {.column width="30%" .tc .nt4}
-[[{{< fa code >}}&ensp;Code samples]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/developer/samples-jupyter-notebooks.html){target="_blank"}<br>
+[[{{< fa code >}}&ensp;Code Samples]{.button .button-light-green .shadow-5-ns}](/developer/samples-jupyter-notebooks.qmd){target="_blank"}<br>
 :::
 
 ::::
@@ -638,58 +605,59 @@ Documentation + Testing + Validation
 
 <!-- Section indicator -->
 ::: {.f6 .tr .nt3 .silver}
-Documentation + Testing + Validation
+Documentation & Testing & Validation — 4/5
 :::
 
 :::: {.columns}
 
-::: {.column width="70%" .mt2}
-![](../assets/vm-assess-compliance.gif){fig-alt="An animation of a validation report being scrolled through on the ValidMind platform to assess compliance. The reviewer then changes the assessment from No Adherence to Some Adherence in the dropdown menu" .screenshot .tilt-right}
+::: {.column width="50%" .mt2}
+![](../assets/vm-assess-compliance.gif){fig-alt="An animation of a validation report being scrolled through on the ValidMind Platform to assess compliance. The reviewer then changes the assessment from No Adherence to Some Adherence in the dropdown menu" .screenshot .tilt-right}
 :::
 
-::: {.column width="30%" .pl4 .f3}
-[Validation]{.f2 .b}
+::: {.column width="50%" .pl4 .f4}
+[Validation]{.f2 .b style="color: #083e44;"}
 
-- [Tailor the process]{.b} to regulatory or internal standards
-- [Assess compliance]{.b} by linking evidence from developers and validators
-- [Generate risk assessments]{.b} with recommendations
+Make **handoff between teams seamless**.
+
+Use the same [{{< var validmind.developer >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} and [{{< var validmind.platform >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} used to develop models to ...
+
+- [Tailor the validation process]{.b} to regulatory or internal standards.
+- [Assess compliance]{.b} by linking evidence from developers and validators.
+- [Generate risk assessments]{.b} with recommendations.
 :::
 
 ::::
 
 ::: {.slideover--b .auto-collapse}
 
-:::: columns
+::: {.tc}
+[[{{< fa circle-info >}}&ensp;How do I prepare validation reports?]{.button .button-light-green .shadow-5-ns}](/guide/model-validation/preparing-validation-reports.qmd){target="_blank"}
 
-::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I prepare validation reports?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-validation/preparing-validation-reports.html){target="_blank"} 
 :::
-
-::: {.column width="50%" .tc .nt4}
-[[{{< fa rocket >}}&ensp;Open validation reports]{.button .button-light-green .shadow-5-ns}](https://app.prod.validmind.ai/model-inventory){target="_blank"}
-:::
-
-::::
 
 :::
 
 
-# [Robust processes]{.hidden}
+# [Robust & Transparent Processes]{.hidden}
 
 <!-- Section indicator -->
 ::: {.f6 .tl .mb4 .nt6 .silver}
-Documentation + Testing + Validation
+Documentation & Testing & Validation — 5/5
 :::
 
 :::: {.columns}
 
-::: {.column width="50%" .pr4 .f3 .nt3} 
-[Robust processes]{.f2 .b}
+::: {.column width="50%" .pr4 .f4 .nt3} 
+[Robust & Transparent Processes]{.f2 .b style="color: #083e44;"}
 
-- Create [challenger models]{.b}
-- Open [validation issues]{.b}
-- Track [remediation plans]{.b} and monitor resolution
-- [Collaborate]{.b} with developers to resolve issues
+As a validator, use the same tools used to develop models to ...
+
+- Create [challenger models]{.b} and link the test results from your challenger model as evidence to your validation report.
+- Run a variety of thorough model comparison tests to [mount an effective challenge]{.b}.
+- Open [validation issues]{.b}, track [remediation plans]{.b} and monitor resolution.
+- [Collaborate]{.b} with developers to resolve issues.
+
+
 :::
 
 ::: {.column width="50%" .nt3}
@@ -702,26 +670,22 @@ Documentation + Testing + Validation
 
 :::: columns
 
-::: {.column width="50%" .nt4}
-[{{< fa lightbulb >}}&ensp;Did you know?]{.f3 .b}<br>
-
-::: {.pl3 .nt4}
-As a validator, you can use **the same library** as developers: 
+::: {.column width="30%" .tc .nt4}
+[[{{< fa circle-info >}}&ensp;Validator Quickstart]{.button .button-light-green .shadow-5-ns}](/notebooks/quickstart/quickstart_model_validation.ipynb){target="_blank"}
 :::
 
+::: {.column width="40%" .tc .nt4}
+[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](/training/validator-fundamentals/validator-fundamentals-register.qmd){target="_blank"} 
 :::
 
-::: {.column width="50%" .tc .pl4 .nt4}
-[[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html){target="_blank"}
-<!-- <br>[TIP: CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5} -->
+::: {.column width="30%" .tc .nt4}
+[[{{< fa code >}}&ensp;Validation Use Case]{.button .button-light-green .shadow-5-ns}](/notebooks/code_samples/model_validation/validate_application_scorecard.ipynb){target="_blank"}<br>
 :::
 
 ::::
 
-::: {.nt4}
-- Run thorough model comparison tests, such as performance, diagnostic, and feature importance tests by  to mount an effective challenge.
-- Link the test results from your challenger model as evidence to your validation report.
-:::
+<!-- [[{{< fa circle-info >}}&ensp;Validator Fundamentals Training]{.button .button-light-green .shadow-5-ns}](/training/validator-fundamentals/validator-fundamentals-register.qmd){target="_blank"} -->
+<!-- <br>[TIP: CHALLENGER MODELS ARE COVERED IN MODULE 3]{.smallcaps .f5} -->
 
 :::
 
@@ -743,22 +707,22 @@ As a validator, you can use **the same library** as developers:
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
-[Ongoing Monitoring]{.f2 .b}
+[Ongoing Monitoring]{.f1 .b style="color: #083e44;"}
 
 <!-- <hr> -->
 
-ValidMind provides [ongoing monitoring]{.b} to ensure items perform as expected and to detect potential issues early.
+{{< var vm.product >}} provides [ongoing monitoring]{.b} to ensure items perform as expected and to detect potential issues early.
 
 Combine monitoring and workflows for [performance-based governance]{.b} with [thresholds and alerts]{.b} to trigger action.
 :::
 
 ::::
 
-# [Ongoing monitoring]{.hidden}
+# [Ongoing Monitoring]{.hidden}
 
 <!-- Section indicator -->
 ::: {.f6 .tl .pt6 .nt3 .silver}
-Ongoing Monitoring
+Ongoing Monitoring — 2/3
 :::
 
 :::: {.columns}
@@ -766,20 +730,20 @@ Ongoing Monitoring
 ::: {.column width="50%" .f3 .pt1}
 
 ::: {.pb2}
-[Monitor your performance]{.f2 .b}
+[Monitor Your Performance]{.f2 .b style="color: #083e44;"}
 :::
 
-[{{< fa check >}}]{.dark-pink} &ensp; [Enable]{.b} for any item in the inventory
+[{{< fa check >}}]{.dark-pink} &ensp; [Enable]{.b} for any item in the inventory.
 
-[{{< fa check >}}]{.dark-pink} &ensp; [Track]{.b} performance over time
+[{{< fa check >}}]{.dark-pink} &ensp; [Track]{.b} performance over time.
 
-[{{< fa check >}}]{.dark-pink} &ensp; [Detect]{.b} data drift and other issues early
+[{{< fa check >}}]{.dark-pink} &ensp; [Detect]{.b} data drift and other issues early.
 
-[{{< fa check >}}]{.dark-pink} &ensp; [Define]{.b} thresholds and receive alerts
+[{{< fa check >}}]{.dark-pink} &ensp; [Define]{.b} thresholds and receive alerts.
 :::
 
 ::: {.column width="50%" .pl4 .tr .f3 .nt6 .tilt-left}
-![Ongoing monitoring documentation](../assets/vm-ongoing-monitoring.gif){width="80%" fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind platform showing performance metrics and potential issues" .screenshot}
+![Ongoing monitoring documentation](../assets/vm-ongoing-monitoring.gif){width="80%" fig-alt="An animation of ongoing model monitoring being scrolled through on the ValidMind Platform showing performance metrics and potential issues" .screenshot}
 
 ![Identify potential issues early](../assets/target-prediction-distribution-plot-zoomed.png){width="80%" fig-alt="A screenshot of a graph that shows potential data drift over time" .screenshot}
 :::
@@ -790,7 +754,7 @@ Ongoing Monitoring
 
 <!-- Section indicator -->
 ::: {.f6 .tr .nt5 .mb5 .pr4 .silver}
-Ongoing Monitoring
+Ongoing Monitoring — 3/3
 :::
 
 :::: {.columns}
@@ -800,22 +764,22 @@ Ongoing Monitoring
 :::
 
 ::: {.column width="60%" .pl4 .f4 .nt5}
-[Outcomes Analysis]{.f2 .b}
+[Outcomes Analysis]{.f2 .b style="color: #083e44;"}
 
 ::: {.pl4 .mb3}
-- Detect test results that [exceed thresholds]{.b}
-- Follow [escalation workflows]{.b} when metrics exceed limits
-- Document and [track remediation]{.b} activities
+- Detect test results that [exceed thresholds]{.b}.
+- Follow [escalation workflows]{.b} when metrics exceed limits.
+- Document and [track remediation]{.b} activities.
 :::
 
-[Data-Driven Governance]{.f2 .b}
+[Data-Driven Governance]{.f2 .b style="color: #083e44;"}
 
 ::: {.pl4}
 Combine monitoring & workflows for:
 
-- Scheduled [revalidation cycles]{.b}
-- Event-triggered [reassessments]{.b}
-- [Escalation]{.b} to risk functions & committees
+- Scheduled [revalidation cycles]{.b}.
+- Event-triggered [reassessments]{.b}.
+- [Escalation]{.b} to risk functions & committees.
 :::
 
 :::
@@ -827,11 +791,11 @@ Combine monitoring & workflows for:
 :::: columns
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I enable monitoring?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/enable-monitoring.html){target="_blank"} 
+[[{{< fa circle-info >}}&ensp;How do I enable monitoring?]{.button .button-light-green .shadow-5-ns}](/guide/monitoring/enable-monitoring.qmd){target="_blank"} 
 :::
 
 ::: {.column width="50%" .tc .nt4}
-[[{{< fa bell >}}&ensp;Set thresholds and alerts]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/monitoring/set-thresholds-and-alerts.html){target="_blank"}
+[[{{< fa bell >}}&ensp; How do I set thresholds and alerts?]{.button .button-light-green .shadow-5-ns}](/guide/monitoring/set-thresholds-and-alerts.qmd){target="_blank"}
 :::
 
 ::::
@@ -839,7 +803,7 @@ Combine monitoring & workflows for:
 :::
 
 
-# [6&ensp;Risk Insights + Regulatory Alignment]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
+# [6&ensp;Risk Insights & Regulatory Alignment]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
 :::: {.columns}
 
@@ -856,22 +820,22 @@ Combine monitoring & workflows for:
 :::
 
 ::: {.column width="70%" .f2 .pl3 .pr3 .pt2}
-[Risk Insights + Regulatory Alignment]{.f1 .b}
+[Risk Insights & Regulatory Alignment]{.f2 .b style="color: #083e44;"}
 
 <!-- <hr> -->
 
-ValidMind provides [AI-powered risk insights]{.b} to enhance documentation quality, plus built-in support for [regulatory frameworks]{.b} and compliance requirements.
+{{< var vm.product >}} provides [AI-powered risk insights]{.b} to enhance documentation quality, plus built-in support for [regulatory frameworks]{.b} and compliance requirements.
 
 :::
 
 ::::
 
 
-# [Document checker]{.hidden}
+# [{{< var validmind.checker >}}]{.hidden}
 
 <!-- Section indicator -->
 ::: {.f6 .tr .nt6 .mb4 .pr4 .silver}
-Risk Insights + Regulatory Alignment
+Risk Insights & Regulatory Alignment — 2/2
 :::
 
 :::: {.columns}
@@ -879,7 +843,7 @@ Risk Insights + Regulatory Alignment
 ::: {.column width="50%"}
 
 ::: {.nt5 .tc}
-![](../assets/overview-llm-features-check-document-in-progress.gif){width="50%" .lightbox .screenshot .tilt-right}
+![](../assets/overview-llm-features-check-document-in-progress.gif){width="60%" .lightbox .screenshot .tilt-right}
 :::
 
 :::
@@ -887,16 +851,16 @@ Risk Insights + Regulatory Alignment
 ::: {.column width="50%" .nt3}
 
 ::: {.pt2 .pl4 .pb4 .f3}
-[Document Checker]{.f2 .b}
+[{{< var validmind.checker >}}]{.f2 .b style="color: #083e44;"}
 
-- [Assesses]{.b} whether required information is clearly documented
-- [Identifies]{.b} missing or weak areas in the documentation
-- [Guides]{.b} you on how to improve clarity, completeness, and compliance
-- [Aligns]{.b} with regulatory expectations for risk and model governance 
+Use {{< var vm.product >}}'s {{< var vm.checker >}} to:
 
-::: {.f4 .pl3 .pt2}
-[SR 11-7]{.button-small .shadow-5-ns} [SS1/23]{.button-small .shadow-5-ns} [E-23]{.button-small .shadow-5-ns} [EU AI ACT]{.button-small .shadow-5-ns}
-:::
+- [Assess]{.b} whether required information is clearly documented.
+- [Identify]{.b} missing or weak areas in the documentation.
+- [Guide]{.b} you on how to improve clarity, completeness, and compliance.
+- [Align]{.b} with regulatory expectations for risk and model governance.
+
+  [SR 11-7]{.bubble .smallcaps} [SS1/23]{.bubble .smallcaps} [E-23]{.bubble .smallcaps} [EU AI ACT]{.bubble .smallcaps}
 
 :::
 
@@ -907,29 +871,29 @@ Risk Insights + Regulatory Alignment
 ::: {.slideover--b .auto-collapse}
 
 ::: {.tc .nt4}
-[[{{< fa circle-info >}}&ensp;How do I use the document checker?]{.button .button-light-green .shadow-5-ns}](https://docs.validmind.ai/guide/model-documentation/check-documentation-for-compliance.html){target="_blank"}
+[[{{< fa circle-info >}}&ensp;How do I use the {{< var vm.checker >}}?]{.button .button-light-green .shadow-5-ns}](/guide/model-documentation/check-documentation-for-compliance.qmd){target="_blank"}
 :::
 
 :::
 
 
-# [Putting governance into practice]{.hidden}
+# [Put Governance into Practice]{.hidden}
 
 :::: {.columns}
 
 ::: {.column width="50%" .pl3 .pr3}
 
 ::: {.pl4 .mb4}
-[Put governance into practice]{.f1 .b}
+ ![](/assets/img/bevalid-check.svg){style="height: 1em; vertical-align: bottom;"} [Put Governance into Practice]{.f1 .b style="color: #DE257E;"}
 
 ::: {.f3}
 Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[[AI governance<br>[[EU AI ACT]{.dark-pink}]{.button-small .f6}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
+[[AI governance<br>[[EU AI ACT]{.green}]{.button-small .f6}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
 
-[[Model risk management<br>[[SR 11-7]{.dark-pink}]{.button-small .f6} [[SS1/23]{.dark-pink}]{.button-small .f6} [[E-23]{.dark-pink}]{.button-small .f6}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
+[[Model risk management<br>[[SR 11-7]{.green}]{.button-small .f6} [[SS1/23]{.green}]{.button-small .f6} [[E-23]{.green}]{.button-small .f6}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
 :::
 :::
 
@@ -973,7 +937,7 @@ Need more?
 :::
 
 ::: {.pl2 .pr2}
-[[Quickstarts]{.b .black .f4}](https://docs.validmind.com/get-started/get-started.html){target="_blank"}
+[[Quickstarts]{.b .black .f4}](/get-started/get-started.qmd){target="_blank"}
 :::
 
 :::
@@ -987,7 +951,7 @@ Need more?
 :::
 
 ::: {.pl4 .pr4}
-[[Training]{.b .black .f4}](https://docs.validmind.com/training/training.qmd){target="_blank"}
+[[Training]{.b .black .f4}](/training/training.qmd){target="_blank"}
 :::
 
 :::
@@ -1001,7 +965,7 @@ Need more?
 :::
 
 ::: {.pl2 .pr2}
-[[User Guides]{.b .black .f4}](https://docs.validmind.com/guide/guides.html){target="_blank"}
+[[User Guides]{.b .black .f4}](/guide/guides.qmd){target="_blank"}
 :::
 
 :::
@@ -1015,7 +979,7 @@ Need more?
 :::
 
 ::: {.pl2 .pr2}
-[[Code Samples]{.b .black .f4}](https://docs.validmind.com/developer/samples-jupyter-notebooks.html){target="_blank"}
+[[Code Samples]{.b .black .f4}](/developer/samples-jupyter-notebooks.qmd){target="_blank"}
 :::
 
 :::
