--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -204,7 +204,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-80-ns}
-Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of your models with ongoing monitoring plans, scheduled monitoring runs, and tracked metrics over time.
+Learn how to use {{< var vm.product >}} as a developer managing the **ongoing monitoring** of your models with ongoing monitoring plans, scheduled monitoring runs, and tracked metrics over time.
 
 :::
 
