--- a/site/training/what-is-validmind/what-is-validmind-register.qmd
+++ b/site/training/what-is-validmind/what-is-validmind-register.qmd
@@ -60,7 +60,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::
 
 ::: {.w-50-ns}
-#### <sup>Section 2</sup><br> Workflows + Approvals
+#### <sup>Section 2</sup><br> Workflows & Approvals
 
 - Define roles and responsibilities for stakeholders
 - Implement governance for regulations and policies
@@ -72,7 +72,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Section 3</sup><br> Reporting + Analytics
+#### <sup>Section 3</sup><br> Reporting & Analytics
 
 - Use customizable dashboards for oversight
 - Track validation issues, approvals, and sign-offs
@@ -80,7 +80,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::
 
 ::: {.w-50-ns}
-#### <sup>Section 4</sup><br> Documentation + Testing + Validation
+#### <sup>Section 4</sup><br> Documentation & Testing & Validation
 
 - Automate documentation with predefined templates
 - Run 200+ out-of-the-box tests
@@ -100,7 +100,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::
 
 ::: {.w-50-ns}
-#### <sup>Section 6</sup><br> Risk Insights + Regulatory Alignment
+#### <sup>Section 6</sup><br> Risk Insights & Regulatory Alignment
 
 - Use AI-powered document checker for compliance
 - Align with regulatory frameworks like SR 11-7, SS1/23, E-23, and EU AI Act
