--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -10,7 +10,7 @@ toc-expand: true
 Each path provides a structured, hands-on approach to mastering key {{< var vm.product >}}’s features that you can apply in your work.
 
 ::: {.callout title="We are in the process of expanding our training program."}
-If you have a specific topic in mind, [let us know](/training/training.qmd#connect-with-us).
+If you have a specific topic in mind, [let us know](/support/support.qmd).
 :::
 
 ## By user role
@@ -348,7 +348,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::
 
 ::: {.w-50-ns}
-#### <sup>Section 2</sup><br> Workflows + Approvals
+#### <sup>Section 2</sup><br> Workflows & Approvals
 
 - Define roles and responsibilities for stakeholders
 - Implement governance for regulations and policies
@@ -360,7 +360,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Section 3</sup><br> Reporting + Analytics
+#### <sup>Section 3</sup><br> Reporting & Analytics
 
 - Use customizable dashboards for oversight
 - Track validation issues, approvals, and sign-offs
@@ -368,7 +368,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::
 
 ::: {.w-50-ns}
-#### <sup>Section 4</sup><br> Documentation + Testing + Validation
+#### <sup>Section 4</sup><br> Documentation & Testing & Validation
 
 - Automate documentation with predefined templates
 - Run 200+ out-of-the-box tests
@@ -388,7 +388,7 @@ Take a guided tour of {{< var vm.product >}} and discover how the platform helps
 :::
 
 ::: {.w-50-ns}
-#### <sup>Section 6</sup><br> Risk Insights + Regulatory Alignment
+#### <sup>Section 6</sup><br> Risk Insights & Regulatory Alignment
 
 - Use AI-powered document checker for compliance
 - Align with regulatory frameworks like SR 11-7, SS1/23, E-23, and EU AI Act
