--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -3,7 +3,7 @@
 # Refer to the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
 title: What is {{< var vm.product >}}?
-subtitle: <b>a short product tour</b>
+subtitle: "A Short Product Tour"
 favicon: ../assets/validmind.png
 format:
   revealjs:
