Edit as per Slack convo

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -891,9 +891,9 @@ Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[[AI governance<br>[[EU AI ACT]{.green}]{.button-small .f6}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
+[[AI Governance<br>[[[EU AI ACT]{.green}]{.bubble}]{.f5}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4 style="width: 100%;"}
 
-[[Model risk management<br>[[SR 11-7]{.green}]{.button-small .f6} [[SS1/23]{.green}]{.button-small .f6} [[E-23]{.green}]{.button-small .f6}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4}
+[[Model Risk Management<br>[[[SR 11-7]{.green}]{.bubble} [[SS1/23]{.green}]{.bubble} [[E-23]{.green}]{.bubble}]{.f5}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4 style="width: 100%;"}
 :::
 :::
 
