--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -293,17 +293,17 @@ Workflows are entwined with your inventory and enable governance by defining [ro
 # [Roles and Responsibilities]{.hidden}
 
 <!-- Section indicator -->
-::: {.f6 .tr .mb4 .nt4 .silver}
+::: {.f6 .tr .nt6 .mb2 .silver}
 Workflows & Approvals — 2/3
 :::
 
 :::: {.columns}
 
-::: {.column width="60%" .tc .nt6}
+::: {.column width="50%" .tl}
 ![](../assets/vm-risk-classification-workflow.gif){width="90%" fig-alt="A screenshot of workflow detail showing how model registration includes a risk classification step" .screenshot .tilt-right}
 :::
 
-::: {.column width="40%" .f3 .pl3 .nt3}
+::: {.column width="50%" .f3 .pt4 .pl3}
 
 Use workflows within the [{{< var validmind.platform >}}]{style="background-color: #eaf9fb; padding: 0.1em 0.2em; color: #083e44;"} to govern in one centralized place:
 
@@ -371,13 +371,11 @@ Workflows & Approvals — 3/3
 
 [{{< fa check >}}]{.dark-pink} &ensp;[Automate]{.b} risk processes with triggers and schedules.
 
-[{{< fa check >}}]{.dark-pink} &ensp;[Standardize]{.b} documentation and validation.
-
 [{{< fa check >}}]{.dark-pink} &ensp;[Get alerts]{.b} for items that need attention.
 :::
 :::
 
-::: {.column width="30%" .pl4 .pr3 .nt5}
+::: {.column width="30%" .pl4 .pr3 .nt6}
 ![](../assets/vm-settings-workflows.png){fig-alt="A screenshot of ready-made workflows" .screenshot .tilt-left}
 :::
 
@@ -424,13 +422,13 @@ Use [customizable dashboards]{.b} for oversight, alongside [extensible analytics
 # [Reporting and Analytics]{.hidden}
 
 <!-- Section indicator -->
-::: {.f6 .tr .mb4 .pr3 .silver}
+::: {.f6 .tr .nt5 .mb4 .pr3 .silver}
 Reporting & Analytics — 2/2
 :::
 
 :::: {.columns}
 
-::: {.column width="60%" .tc .nt4}
+::: {.column width="60%" .tc .nt3}
 ![](../assets/vm-analytics.gif){fig-alt="An animation of analytics being scrolled through on the ValidMind Platform. The scrolling starts on the Models tab and then switches to the Artifacts tab, followed by a look at a sample artifact before returning to the original tab" .screenshot .tilt-right}
 :::
 
@@ -502,7 +500,7 @@ Documentation & Testing & Validation — 2/5
 
 :::: {.columns}
 
-::: {.column width="50%" .nt5}
+::: {.column width="50%" .nt4}
 
 ![](../assets/vm-model-documentation.gif){width="100%" fig-alt="An animation of model documentation being scrolled through on the ValidMind Platform. The scrolling starts at the documentation overview and then expands the development documentation section" .screenshot .tilt-right}
 
@@ -574,7 +572,7 @@ The [{{< var validmind.developer >}}]{style="background-color: #eaf9fb; padding:
 - Capability for extension with [custom tests]{.b} and [test providers]{.b}. 
 :::
 
-::: {.column width="50%" .nt4}
+::: {.column width="50%" .nt2}
 ![](../assets/vm-test-sandbox.gif){fig-alt="An animation of the model testing process as you see various test results and documentation being created" .screenshot .tilt-left}
 :::
 
@@ -660,7 +658,7 @@ As a validator, use the same tools used to develop models to ...
 
 :::
 
-::: {.column width="50%" .nt3}
+::: {.column width="50%" .pt4 .pl2}
 ![](../assets/vm-finding.png){fig-alt="A screenshot of an artifact with details about severity, remediation status and documentation reference" .screenshot .tilt-left}
 :::
 
@@ -840,15 +838,15 @@ Risk Insights & Regulatory Alignment — 2/2
 
 :::: {.columns}
 
-::: {.column width="50%"}
+::: {.column width="40%"}
 
-::: {.nt5 .tc}
+::: {.nt3 .tc}
 ![](../assets/overview-llm-features-check-document-in-progress.gif){width="60%" .lightbox .screenshot .tilt-right}
 :::
 
 :::
 
-::: {.column width="50%" .nt3}
+::: {.column width="60%" .nt3}
 
 ::: {.pt2 .pl4 .pb4 .f3}
 [{{< var validmind.checker >}}]{.f2 .b style="color: #083e44;"}
