One last weird alignment

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -586,7 +586,7 @@ The [{{< var validmind.developer >}}]{style="background-color: #eaf9fb; padding:
 [[{{< fa circle-info >}}&ensp;Developer Quickstart]{.button .button-light-green .shadow-5-ns}](/get-started/developer/quickstart-developer.qmd){target="_blank"}
 :::
 
-::: {.column width="40%" .tr .nt4}
+::: {.column width="40%" .tc .nt4}
 [[{{< fa circle-info >}}&ensp;Developer Fundamentals Training]{.button .button-light-green .shadow-5-ns}](/training/developer-fundamentals/developer-fundamentals-register.qmd){target="_blank"} 
 :::
 
