Slide title & link should match

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -351,7 +351,7 @@ Track all activities for:
 :::
 
 
-# [What do I use workflows for?]{.hidden}
+# [What can I use workflows for?]{.hidden}
 
 <!-- Section indicator -->
 ::: {.f6 .tl .mb4 .pl4 .nt3 .silver}
