Add content tile linking and comment out one-off footer

--- a/site/training/what-is-validmind/what-is-validmind.qmd
+++ b/site/training/what-is-validmind/what-is-validmind.qmd
@@ -7,6 +7,9 @@ subtitle: "A Short Product Tour"
 favicon: ../assets/validmind.png
 format:
   revealjs:
+    include-in-header:
+      - text: |
+          <script src="/training/assets/content-tile.js"></script>
     controls: true
     controls-tutorial: true
     help: true
@@ -36,7 +39,7 @@ skip_preview: true
 
 ::: {.column width="50%" .tr .nt5 .pr5}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.tl .nl4 .nt3}
 [1]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
@@ -50,7 +53,7 @@ skip_preview: true
 
 ::: {.column width="50%" .tl .nt4 .pl5}
 
-:::{.button .button-light-green .shadow-5-ns}
+:::{.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.tl .nl4 .nt3}
 [2]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
@@ -70,7 +73,7 @@ skip_preview: true
 
 ::: {.column width="50%" .tl .pl4 .nt4}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.tl .nl4 .nt3}
 [6]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
@@ -83,7 +86,7 @@ skip_preview: true
 
 ::: {.column width="50%" .tr .pr5}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.tl .nl4 .nt3}
 [3]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
@@ -103,7 +106,7 @@ skip_preview: true
 
 ::: {.column width="50%" .tr .pr6 .nt2}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.tl .nl4 .nt3}
 [5]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
@@ -117,7 +120,7 @@ skip_preview: true
 
 ::: {.column width="50%" .tl .pl4 .pt2}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.tl .nl4 .nt2}
 [4]{.ph3 .br2 .white .bg-dark-green .ba .b--dark-pink .bw1 .smallcaps .f3}
 :::
@@ -152,9 +155,9 @@ skip_preview: true
 
 ::: -->
 
-::: footer
+<!-- ::: footer
 [CONTENTS]{.smallcaps .f3 .b .dark-pink}&ensp;|&ensp;[{{< var validmind.training >}}  [{{< fa person-walking-dashed-line-arrow-right >}}](/training/training.qmd)]{.f6}
-:::
+::: -->
 
 # [1&ensp;The Inventory]{.hidden}{background-gradient="radial-gradient(#FFFFFF, #F3FAFB)"}
 
@@ -889,9 +892,9 @@ Use our implementation guides for:
 :::
 
 ::: {.f4 .pl3 .pt2}
-[[AI Governance<br>[[[EU AI ACT]{.green}]{.bubble}]{.f5}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4 style="width: 100%;"}
+[[AI Governance<br>[[[EU AI ACT]{.green}]{.bubble}]{.f5}](/about/use-cases/ai-governance.qmd){target="_blank"}]{.button .shadow-5-ns .f4 .content-tile style="width: 100%;"}
 
-[[Model Risk Management<br>[[[SR 11-7]{.green}]{.bubble} [[SS1/23]{.green}]{.bubble} [[E-23]{.green}]{.bubble}]{.f5}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4 style="width: 100%;"}
+[[Model Risk Management<br>[[[SR 11-7]{.green}]{.bubble} [[SS1/23]{.green}]{.bubble} [[E-23]{.green}]{.bubble}]{.f5}](/about/use-cases/model-risk-management.qmd){target="_blank"}]{.button .shadow-5-ns .f4 .content-tile style="width: 100%;"}
 :::
 :::
 
@@ -929,7 +932,7 @@ Need more?
 
 ::: {.column width="25%" .pl3 .pt5}
 
-::: {.button .button-light-green .shadow-5-ns .br3}
+::: {.button .button-light-green .shadow-5-ns .br3 .content-tile}
 ::: {.nt5}
 ![](quickstart.png){height=125px fig-alt="Quickstarts"}
 :::
@@ -943,7 +946,7 @@ Need more?
 
 ::: {.column width="25%" .pl3 .nt5}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.nt5}
 ![](training.png){height=125px fig-alt="Training"}
 :::
@@ -957,7 +960,7 @@ Need more?
 
 ::: {.column width="25%" .pl3 .pt6}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.nt5}
 ![](guides.png){height=125px fig-alt="User Guides"}
 :::
@@ -971,7 +974,7 @@ Need more?
 
 ::: {.column width="25%" .pl4 .pt1}
 
-::: {.button .button-light-green .shadow-5-ns}
+::: {.button .button-light-green .shadow-5-ns .content-tile}
 ::: {.nt5}
 ![](code-samples.png){height=125px fig-alt="Code Samples"}
 :::
