"What is ValidMind?" product tour, part (#1109)
* Move product tour folder into documentation repo

* Add missing assets, fix SCSS, add registration page, image

* Add copyright headers

* Minor heading tweak

* Restructured, reworked, revitalized

* Fix output filename to get around global HTML output settings required by _metadata.yml

* Remove registration from use case courses, replace button

* Edits

* Minor edit

* Rough in new look

* Fix font

* Reorder content page

* Consistency edits, fix broken link

* Add tilt effect, edits

* Edits, change .bg-dark-green to dark teal

* Remove output folder

* Edits

* So many edits

* Edits

* Edits

* Edits

* Background image test

* Edits, add more images

* Make images transparent, fix arrow orientation

* Add pause button

* Reorder contents page

* Edits, s-shape experiment

* Edits, make more image backgrounds transparent

* Edits

* Remove auto-slide, add target=_blank for links, rework footer

* More footer tweaks

* Edits, update dark pink colour to VM colour

* Add section indicators

* Address more review comments

* Yet more edits to address review comments

* Edits, tweaks, rain dance

* Tinker with subtle radial gradient, rotate s-shape

* Update s-shape again, tweaks

* Add copyright headers

* Update learning paths page, product tour registration page, and fix typo

* Edits

* Tweak

* Tweak2

* Edit as per Slack convo

* Yeet placeholder product tour

* Whitespace Tetris

* One last weird alignment

* Slide title & link should match

* Add content tile linking and comment out one-off footer

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -10,24 +10,22 @@ toc-expand: true
 Each path provides a structured, hands-on approach to mastering key {{< var vm.product >}}’s features that you can apply in your work.
 
 ::: {.callout title="We are in the process of expanding our training program."}
-If you have a specific topic in mind, [let us know](/training/training.qmd#connect-with-us).
+If you have a specific topic in mind, [let us know](/support/support.qmd).
 :::
 
-## End-to-end courses
+## By user role
 
-Develop role-based expertise for your entire organization.
-
-### AI Governance
+### Administrator Fundamentals
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-80-ns}
-Learn how to use {{< var vm.product >}} for **AI governance** to establish organizational oversight for AI systems, manage use cases through their lifecycle, and ensure compliance with regulations like the EU AI Act.
+Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, customize the {{< var validmind.platform >}} for your institution's requirements, and use the {{< var vm.platform >}} as your centralized hub for risk management oversight.
 
 :::
 
 ::: {.w-20-ns .tc}
-[register now](/training/ai-governance/ai-governance-register.qmd){.button-green .cta target="_blank"}
+[register now](/training/administrator-fundamentals/administrator-fundamentals-register.qmd){.button-green .cta target="_blank"}
 
 :::
 
@@ -37,19 +35,20 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Understanding AI Governance
+#### <sup>Module 1</sup><br> Onboarding Your Organization
 
-- Learn AI governance concepts & terminology
-- Understand AI governance vs MRM
-- Explore {{< var vm.product >}} platform orientation
+- Set up the foundations of your organization
+- Set up groups, roles, & permissions
+- Invite users and assign access to features
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Managing AI Use Cases
+#### <sup>Module 2</sup><br> Customizing Your Model Inventory
 
-- Work with use case inventories
-- Conduct impact assessments
-- Manage risk classification & lifecycle stages
+- Configure model inventory & artifact (finding) fields
+- Customize document templates
+- Configure reusable blocks
+
 :::
 
 ::::
@@ -57,23 +56,24 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Configuring AI Workflows
+#### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
+- Set up and manage custom workflows
+- Manage regulations and policies
+- Set up attestations
 
-- Set up intake & approval workflows
-- Configure human oversight controls
-- Manage escalation paths
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Compliance & Oversight
+#### <sup>Module 4</sup><br> Organizational Oversight & Reporting
 
-- Map regulatory requirements
-- Configure dashboards & reporting
-- Generate audit evidence
+- Audit model activity
+- Audit workflows
+- View and customize analytics
+
 :::
 
 ::::
-::: 
+:::
 
 ### Developer Fundamentals
 
@@ -199,72 +199,12 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 ::::
 :::
 
-### Administrator Fundamentals
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-80-ns}
-Learn how to use {{< var vm.product >}} as an **administrator** to onboard your organization, customize the {{< var validmind.platform >}} for your institution's requirements, and use the {{< var vm.platform >}} as your centralized hub for risk management oversight.
-
-:::
-
-::: {.w-20-ns .tc}
-[register now](/training/administrator-fundamentals/administrator-fundamentals-register.qmd){.button-green .cta target="_blank"}
-
-:::
-
-::::
-
-::: {.attn}
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Onboarding Your Organization
-
-- Set up the foundations of your organization
-- Set up groups, roles, & permissions
-- Invite users and assign access to features
-:::
-
-::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Customizing Your Model Inventory
-
-- Configure model inventory & artifact (finding) fields
-- Customize document templates
-- Configure reusable blocks
-
-:::
-
-::::
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Using {{< var vm.product >}} for Model Risk Management
-- Set up and manage custom workflows
-- Manage regulations and policies
-- Set up attestations
-
-:::
-
-::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Organizational Oversight & Reporting
-
-- Audit model activity
-- Audit workflows
-- View and customize analytics
-
-:::
-
-::::
-:::
-
 ### Monitoring Fundamentals <br>[coming soon]{.smallercaps .pink}
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-80-ns}
-Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of your models with ongoing monitoring plans, scheduled monitoring runs, and tracked metrics over time.
+Learn how to use {{< var vm.product >}} as a developer managing the **ongoing monitoring** of your models with ongoing monitoring plans, scheduled monitoring runs, and tracked metrics over time.
 
 :::
 
@@ -340,165 +280,6 @@ Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of 
 ::::
 :::
 
-## Standalone courses
-
-Useful skills for anyone who wants to use {{< var vm.product >}}. 
-
-### {{< var vm.product >}} Guided Tour <br>[coming soon]{.smallercaps .pink}
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-80-ns}
-Learn how to navigate the {{< var vm.product >}}'s key features and understand how they work together to support AI governance and compliance with regulations like the EU AI Act.
-
-:::
-
-::: {.w-20-ns .tc}
-[coming soon]{.button .cta target="_blank"}
-
-:::
-
-::::
-
-
-::: {.attn .hidden}
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-30-ns}
-{{< fa check >}} **Most course content exists**
-
-- Create course with 4 modules
-
-- Create course registration page & add to training portal
-:::
-
-::: {.w-30-ns}
-{{< fa x >}} **No videos**
-
-- Create 1 video
-:::
-
-::: {.w-30-ns .pl4 .bl}
-**Notes**
-
-- Derived from [EU AI Act (V0)](https://docs-staging.validmind.ai/product-demos/eu-ai-act/v0/index.html#/title-slide)
-- Switch to training template
-- Fix display issues using V1 fix (don't use absolute negative placement for columns) 
-:::
-
-::::
-:::
-
-::: {.attn}
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns}
-#### <sup>Module 1</sup><br> The {{< var vm.product >}} Model Inventory
-
-- Understand how the model inventory serves as your central hub for registered models <!-- {{< fa check >}} -->
-- Learn to register new models with appropriate templates <!-- {{< fa check >}} -->
-- Configure custom inventory fields and business units <!-- {{< fa check >}} -->
-- Calculate risk classifications for AI systems <!-- {{< fa check >}} -->
-:::
-
-::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Model Documentation & Testing
-
-- Navigate the documentation templates and structure <!-- {{< fa check >}} -->
-- Explore the library of 250+ out-of-the-box tests <!-- {{< fa check >}} -->
-- Learn to use AI-powered documentation features <!-- {{< fa check >}} -->
-- Understand how to customize workflows for your needs <!-- {{< fa check >}} -->
-:::
-
-::::
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Validation & Collaboration
-
-- Create and manage validation reports <!-- {{< fa check >}} -->
-- Learn to assess compliance and link evidence <!-- {{< fa check >}} -->
-- Create and track artifacts (findings) with severity and due dates <!-- {{< fa check >}} -->
-- Use collaboration features for developer-validator interaction <!-- {{< fa check >}} -->
-:::
-
-::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Monitoring & Governance
-
-- Set up ongoing monitoring for production models <!-- {{< fa check >}} -->
-- Track model performance and identify data drift <!-- {{< fa check >}} -->
-- Access and interpret governance analytics <!-- {{< fa check >}} -->
-- Generate reports for non-technical stakeholders <!-- {{< fa check >}} -->
-:::
-
-::::
-:::
-
-### {{< var vm.product >}} Content Features <br>[coming soon]{.smallercaps .pink}
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-80-ns}
-Learn how to use {{< var vm.product >}}'s content features to enhance documentation, and to enable or disable text generation with GenAI.
-
-:::
-
-::: {.w-20-ns .tc}
-[coming soon]{.button .cta target="_blank"}
-
-:::
-
-::::
-
-
-::: {.attn .hidden}
-
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-30-ns}
-{{< fa x >}} **No course**
-
-- Create course with 2 modules
-- Create course registration page & add to training portal
-:::
-
-::: {.w-30-ns}
-{{< fa x >}} **No videos**
-
-- Create 2 videos
-:::
-
-::: {.w-30-ns}
-<!-- **Notes**
-
-- TBD -->
-:::
-
-::::
-:::
-
-::: {.attn}
-:::: {.flex .flex-wrap .justify-around}
-
-::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Using Text Generation
-
-- When to use GenAI to draft content <!-- {{< fa x >}} -->
-- How to turn GenAI on and off <!-- {{< fa x >}} -->
-::: 
-
-::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Enhancing Content
-
-- How to edit content <!-- {{< fa x >}} -->
-- Write optional assessment prompts <!-- {{< fa x >}} -->
-:::
-
-::::
-:::
-
 <!-- ### 'Michael-in-a-Box' (TBD)
 
 As a solutions architect who is new to {{< var vm.product >}}, learn how to set up a demo account and walk your customer through the platform.
@@ -536,3 +317,141 @@ As a solutions architect who is new to {{< var vm.product >}}, learn how to set 
 - LaTex formulas in JSON templates
 ::: -->
 
+
+## By use case
+
+### What is {{< var vm.product >}}? <br>[product tour]{.smallercaps .dark-green}
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Take a guided tour of {{< var vm.product >}} and discover how the platform helps you implement governance and oversight through automated documentation, comprehensive testing, and streamlined workflows.
+
+:::
+
+::: {.w-20-ns .tc}
+[register now](/training/what-is-validmind/what-is-validmind-register.qmd){.button-green .cta target="_blank"}
+
+:::
+
+::::
+
+::: {.attn}
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Section 1</sup><br> The Inventory
+
+- Understand how the inventory serves as your system of record for governance
+- Track AI systems, models, use cases, and tools
+- Learn to register items and start the governance lifecycle
+:::
+
+::: {.w-50-ns}
+#### <sup>Section 2</sup><br> Workflows & Approvals
+
+- Define roles and responsibilities for stakeholders
+- Implement governance for regulations and policies
+- Track all activities with audit trails
+:::
+
+::::
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Section 3</sup><br> Reporting & Analytics
+
+- Use customizable dashboards for oversight
+- Track validation issues, approvals, and sign-offs
+- Export documents to share with stakeholders
+:::
+
+::: {.w-50-ns}
+#### <sup>Section 4</sup><br> Documentation & Testing & Validation
+
+- Automate documentation with predefined templates
+- Run 200+ out-of-the-box tests
+- Prepare validation reports and assess compliance
+:::
+
+::::
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Section 5</sup><br> Ongoing Monitoring
+
+- Enable monitoring for items in the inventory
+- Track performance and detect data drift
+- Define thresholds and receive alerts
+:::
+
+::: {.w-50-ns}
+#### <sup>Section 6</sup><br> Risk Insights & Regulatory Alignment
+
+- Use AI-powered document checker for compliance
+- Align with regulatory frameworks like SR 11-7, SS1/23, E-23, and EU AI Act
+- Generate risk assessments with recommendations
+:::
+
+::::
+:::
+
+### AI Governance
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}} for **AI governance** to establish organizational oversight for AI systems, manage use cases through their lifecycle, and ensure compliance with regulations like the EU AI Act.
+
+:::
+
+::: {.w-20-ns .tc}
+[register now](/training/ai-governance/ai-governance-register.qmd){.button-green .cta target="_blank"}
+
+:::
+
+::::
+
+::: {.attn}
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Module 1</sup><br> Understanding AI Governance
+
+- Learn AI governance concepts & terminology
+- Understand AI governance vs MRM
+- Explore {{< var vm.product >}} platform orientation
+:::
+
+::: {.w-50-ns}
+#### <sup>Module 2</sup><br> Managing AI Use Cases
+
+- Work with use case inventories
+- Conduct impact assessments
+- Manage risk classification & lifecycle stages
+:::
+
+::::
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Module 3</sup><br> Configuring AI Workflows
+
+- Set up intake & approval workflows
+- Configure human oversight controls
+- Manage escalation paths
+:::
+
+::: {.w-50-ns}
+#### <sup>Module 4</sup><br> Compliance & Oversight
+
+- Map regulatory requirements
+- Configure dashboards & reporting
+- Generate audit evidence
+:::
+
+::::
+::: 
