--- a/site/training/ai-governance/ai-governance-register.qmd
+++ b/site/training/ai-governance/ai-governance-register.qmd
@@ -63,7 +63,7 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 
 ::: {.w-50-ns .pa3 .tr}
 
-[register](#register){.button-green .cta}
+[{{< fa circle-play >}} start course](understanding-ai-governance.html){.button-green .cta}
 :::
 
 ::::
@@ -73,8 +73,4 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 
 :::
 
-{{< include /training/_training-register.qmd >}}
-
-<span id="feedback-help"></span>
-
-{{< include /training/_training-support.qmd >}}
+<!-- {{< include /training/_training-register.qmd >}} -->
