--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -44,6 +44,8 @@ listing:
     image-height: 225px
     sort: false
     contents:
+    - path: what-is-validmind/what-is-validmind-register.qmd
+      image: what-is-validmind/what-is-validmind.png
     - path: ai-governance/ai-governance-register.qmd
       image: ai-governance/ai-governance.png
     fields: [image, title, description]
@@ -107,12 +109,12 @@ Gain **practical experience** and discover what the platform has to offer with o
 :::{#training-curriculum}
 :::
 
-## Using the product
+## By user role
 
 :::{#training-product}
 :::
 
-## Use cases
+## By use case
 
 :::{#training-use-cases}
 :::
@@ -180,8 +182,5 @@ Each interactive notebook includes the sample code needed to test and document a
 :::
 
 :::
-
-{{< include _training-support.qmd >}}
-
 
 :::
