"What is ValidMind?" product tour, part (#1109)
* Move product tour folder into documentation repo

* Add missing assets, fix SCSS, add registration page, image

* Add copyright headers

* Minor heading tweak

* Restructured, reworked, revitalized

* Fix output filename to get around global HTML output settings required by _metadata.yml

* Remove registration from use case courses, replace button

* Edits

* Minor edit

* Rough in new look

* Fix font

* Reorder content page

* Consistency edits, fix broken link

* Add tilt effect, edits

* Edits, change .bg-dark-green to dark teal

* Remove output folder

* Edits

* So many edits

* Edits

* Edits

* Edits

* Background image test

* Edits, add more images

* Make images transparent, fix arrow orientation

* Add pause button

* Reorder contents page

* Edits, s-shape experiment

* Edits, make more image backgrounds transparent

* Edits

* Remove auto-slide, add target=_blank for links, rework footer

* More footer tweaks

* Edits, update dark pink colour to VM colour

* Add section indicators

* Address more review comments

* Yet more edits to address review comments

* Edits, tweaks, rain dance

* Tinker with subtle radial gradient, rotate s-shape

* Update s-shape again, tweaks

* Add copyright headers

* Update learning paths page, product tour registration page, and fix typo

* Edits

* Tweak

* Tweak2

* Edit as per Slack convo

* Yeet placeholder product tour

* Whitespace Tetris

* One last weird alignment

* Slide title & link should match

* Add content tile linking and comment out one-off footer

---------

Co-authored-by: Beck <164545837+validbeck@users.noreply.github.com>

--- a/site/training/ai-governance/ai-governance-register.qmd
+++ b/site/training/ai-governance/ai-governance-register.qmd
@@ -60,7 +60,7 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 
 ::: {.w-50-ns .pa3 .tr}
 
-[register](#register){.button-green .cta}
+[{{< fa circle-play >}} start course](understanding-ai-governance.html){.button-green .cta}
 :::
 
 ::::
@@ -70,8 +70,4 @@ Learn how to use {{< var vm.product >}} for **AI governance** to establish organ
 
 :::
 
-{{< include /training/_training-register.qmd >}}
-
-<span id="feedback-help"></span>
-
-{{< include /training/_training-support.qmd >}}
+<!-- {{< include /training/_training-register.qmd >}} -->
