--- a/site/training/_training-register.qmd
+++ b/site/training/_training-register.qmd
@@ -16,5 +16,5 @@
 4. **Start your course!**
 
 ::: {.callout-important title="For testing and evaluation purposes only"}
-Do not upload proprietary information — the training environment environment is not to be used for production. If you have questions about testing in the training environment, please [provide feedback or ask for help](#feedback-help).
+Do not upload proprietary information — the training environment environment is not to be used for production. If you have questions about testing in the training environment, please [provide feedback or ask for help](/support/support.qmd).
 :::
