--- a/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
+++ b/site/training/administrator-fundamentals/administrator-fundamentals-register.qmd
@@ -29,7 +29,7 @@ listing:
     - path: using-validmind-for-model-risk-management.html
       title: "Using {{< var vm.product >}} for Model Risk Management"
       subtitle: "Module 3"
-      description: "{{< fa check >}} Set up and mange custom workflows <br> {{< fa check >}} Manage regulations and policies <br> {{< fa check >}} Set up attestations"
+      description: "{{< fa check >}} Set up and manage custom workflows <br> {{< fa check >}} Manage regulations and policies <br> {{< fa check >}} Set up attestations"
       reading-time: "50"
       author: "{{< var vm.product >}}"
     - path: organizational-oversight-reporting.html
@@ -74,7 +74,3 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 :::
 
 {{< include /training/_training-register.qmd >}}
-
-<span id="feedback-help"></span>
-
-{{< include /training/_training-support.qmd >}}
